make findAll work